--- a/styles.css
+++ b/styles.css
@@ -7,10 +7,11 @@
 
 
 .container-1 {
-    background-image: linear-gradient(rgba(35, 97, 255, 0), rgba(35, 97, 255, 0.12));
-    width: 100%;
+    background-image: url("./assets/landing.svg");
+    width: 1408px;
     height: 520px;
-    padding-top: 120px;
+    padding-top: 20px;
+    margin:auto;
 }
 
 .container-2 {}
@@ -243,13 +244,13 @@
     display: flex;
     flex-direction: column;
     gap: 18px;
-    max-width:240px;
+    max-width: 240px;
 }
 
 .footer-sub:first-child {
     height: 320px;
     margin-top: 48px;
-   
+
 }
 
 .footer-header {
@@ -263,7 +264,7 @@
 }
 
 .footer-subheading {
-    font-family:"Visby CF" ;
+    font-family: "Visby CF";
     font-size: 16px;
     font-weight: 500;
     line-height: 22px;
@@ -272,6 +273,18 @@
     color: #525766;
 
 }
-.gmaps-card{
-    border-radius:18px;
+
+.gmaps-card {
+    border-radius: 18px;
+}
+
+.city {
+    width: 678.74365234375px;
+    height: 250.67236328125px;
+}
+.city:nth-child(2){
+    margin-left: -40px;
+}
+.city-card{
+    margin-top: 42px;
 }
