--- a/styles.css
+++ b/styles.css
@@ -401,7 +401,7 @@
 .progress::after {
     content: "%";
     color: #2361FF;
-    font-family:" Visby CF";
+    font-family: " Visby CF";
     font-size: 24px;
     font-weight: 800;
     line-height: 31px;
@@ -494,4 +494,212 @@
         z-index: 100;
         transform: rotate(315deg);
     }
+}
+
+
+/* carousel */
+* {
+    box-sizing: border-box
+}
+
+/* Slideshow container */
+.slideshow-container {
+    max-width: 900px;
+    position: relative;
+    margin: auto;
+}
+
+/* Hide the images by default */
+.mySlides {
+    display: none;
+}
+
+.slideshow-container2 {
+    max-width: 900px;
+    position: relative;
+    margin: auto;
+}
+
+/* Hide the images by default */
+.mySlidesTwo {
+    display: none;
+}
+/* Next & previous buttons */
+.prev,
+.next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    /* margin-top: -22px; */
+    padding: 16px;
+    color: #525766;
+    background: #FFFFFF;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    /* border-radius: 0 3px 3px 0; */
+    user-select: none;
+    padding: 8px 0;
+    text-align: center;
+}
+
+/* Position the "next button" to the right */
+.next {
+    right: 0;
+    /* border-radius: 3px 0 0 3px; */
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover,
+.next:hover {
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+/* Caption text */
+.text {
+    color: #f2f2f2;
+    font-size: 15px;
+    padding: 8px 12px;
+    position: absolute;
+    bottom: 8px;
+    width: 100%;
+    text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+    color: #f2f2f2;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+}
+.dot2 {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+}
+
+.active,
+.dot:hover {
+    background-color: #717171;
+}
+.active,
+.dot2:hover {
+    background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+    animation-name: fade;
+    animation-duration: 1.5s;
+}
+
+@keyframes fade {
+    from {
+        opacity: .4
+    }
+
+    to {
+        opacity: 1
+    }
+}
+
+
+/* my css */
+
+.carousel-card {
+    width: 873px;
+    height: 384px;
+    border-radius: 40px;
+    background: #FFFFFF;
+    display: flex;
+    margin: auto;
+}
+
+.carousel-width {
+    width: 392px;
+    height: 448px;
+    border-radius: 40px;
+    margin-top: -24px;
+}
+
+.carousel-content {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+    width: 360px;
+    padding-top: 64px;
+    padding-left: 32px;
+}
+
+
+/* versatile carousel */
+
+.ver-crl-image {
+    width: 480px;
+    height: 288px;
+    border-radius: 24px;
+}
+
+.ver-crl-container {
+    padding-bottom: 12px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 480px;
+    height: 591px;
+    border-radius: 24px;
+    border: 2px;
+    background: linear-gradient(0deg, #F4F4F6, #F4F4F6),
+        linear-gradient(0deg, rgba(255, 255, 255, 0.12), rgba(255, 255, 255, 0.12));
+}
+
+.ver-carousel-card {
+    width: 980px;
+    height: 600px;
+    border-radius: 40px;
+    display: flex;
+    margin: auto;
+}
+
+.ver-slideshow-container {
+    max-width: 1100px;
+    position: relative;
+    margin: auto;
+}
+
+.ver-header-font {
+    font-family: "Visby CF";
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 20px;
+    letter-spacing: 0.02em;
+    text-align: left;
+}
+.ver-cnt{
+   display: flex;
+   flex-direction: row;  
+   justify-content: space-around;
+   gap: 24px;
 }
