--- a/styles.css
+++ b/styles.css
@@ -13,8 +13,10 @@ body {
     background-image: url("./assets/landing.svg");
     width: 1408px;
     height: 520px;
+    padding:0px 24px;
     padding-top: 20px;
     margin: auto;
+
 }
 
 .container-2 {}
