--- a/styles.css
+++ b/styles.css
@@ -915,6 +915,23 @@ body {
 
 @media only screen and (max-width: 500px) {
 
+    .phone-mail-text{
+        flex-direction: column;
+        text-align: center;
+    }
+    .phone-mail-text img{
+        margin: auto;
+        margin-bottom: 8px;
+    }
+    .address{
+        flex-direction: column;
+        margin-top: -18px;
+        margin-bottom: 24px;
+    }
+    .address img{
+        margin: auto;
+        margin-bottom: 8px;
+    }
     .button-resp-auto{
         width: auto;
     }
