--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@ body {
     margin: 0 auto;
 }
 
+
 .container-1 {
     background-image: url("./assets/landing.svg");
     width: auto;
@@ -542,6 +543,7 @@ body {
 .mySlidesTwo {
     display: none;
 }
+
 .mySlidesTwoResp {
     display: none;
 }
@@ -934,15 +936,18 @@ body {
 }
 
 @media only screen and (max-width: 500px) {
-    .black-font{
+    .black-font {
         padding: 0 16px;
     }
-    .sub-1-container-3{
+
+    .sub-1-container-3 {
         margin-top: 24px;
     }
-    .small-hidden{
-      display: none;
+
+    .small-hidden {
+        display: none;
     }
+
     .container-progress {
         margin: 0;
         padding: 32px;
@@ -1441,4 +1446,63 @@ summary::-webkit-details-marker {
     -webkit-box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.2);
     -moz-box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.2);
     box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.2);
+}
+
+
+/* about us page css starts */
+
+.about-white-cards {
+    width: 360px;
+    height: 120px;
+    border-radius: 24px;
+    display: flex;
+    gap: 24px;
+    padding: 24px;
+}
+
+.about-img {
+    width: 56px;
+    height: 56px;
+    margin: auto 0;
+}
+
+.news-letter {
+    max-width: 1232px;
+    width: 100%;
+    height: 272px;
+    border-radius: 24px;
+    background: #242933;
+    margin: auto;
+    margin-bottom: 72px;
+    overflow: hidden;
+}
+
+.news-letter-card {
+    width: auto;
+    max-width: 1200px;
+    height: 272px;
+    margin: auto;
+    z-index: 250;
+    font-family: Visby CF;
+    margin-top: -290px;
+    padding: 32px 64px;
+    display: flex;
+    justify-content: space-around;
+    gap: 36px;
+}
+
+.birds-img {
+    width: 167px;
+    height: 104px;
+    margin-right: -720px;
+    margin-top: 24px;
+}
+
+.form-continer-news {
+    width: 520px;
+    height: 54px;
+    background: #FFFFFF;
+    border-radius: 12px;
+    position: relative;
+    z-index: 250;
 }
