--- a/styles.css
+++ b/styles.css
@@ -1506,3 +1506,60 @@ summary::-webkit-details-marker {
     position: relative;
     z-index: 250;
 }
+
+.profile-card-about-page {
+    margin: auto;
+    max-width: 1136px;
+    width: 100%;
+    height: 424px;
+    background: #D6E2FF;
+    border-radius: 24px;
+    display: flex;
+    gap: 8px;
+    padding: 24px 48px;
+}
+
+.profile-image {
+    width: 352px;
+    height: 352px;
+    border-radius: 24px;
+    margin: auto;
+    position: relative;
+    z-index: 200;
+
+}
+
+.profile-details {
+    max-width: 680px;
+    padding: 24px 64px;
+}
+
+.name-card {
+    width: 200px;
+    margin-left: auto;
+}
+
+.birdsContainer {
+    margin: auto;
+    max-width: 1136px;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.birdsCard {
+    margin-left: auto;
+    margin-right: -48px;
+    margin-bottom: -64px;
+}
+
+.blueCard {
+    width: 299px;
+    height: 174px;
+    border-radius: 16px 16px 24px 16px;
+    background: #2361FF;
+    position: relative;
+    margin-top: -200px;
+    margin-right: 36px;
+}
